# Readwise-Export

./: .gitignore  Cargo.toml  DATABASE_SUPPORT.md  README.md  eg.md.tera  live-export.sh  meta.js  readwise.db  test-db-support.sh
.claude/: settings.local.json
.github/workflows/: multi-platform-build.yml
.sqlx/: query-09e3016938858c2fd86ed01e2aa79fa57dee8cbe4e2b57e53929003b4efc45cd.json  query-428d632cf9ca57d992984958cbfe2253489038add14b4b56b63ed0702602afb1.json  query-464725c9f9aba7653ddefb5281ec5ecacfab9b0d109c71e80ed731f96eab9370.json  query-499250a663e6a23a4b255e40d4af4d92793b62103460ee3751ab53273235b6ff.json  query-6d747917aea62ac2fed762aadf4d07c23dabf65813f71baabcb554c57066ad0a.json  query-77e0ee7eebb9d13296f8c8924c05d0669961de904098b11540c2b277b11c1118.json  query-7b5b9c07ffe11b0d90fe7eb48c2ee46a81724250299d768e91d1ce4939c58671.json  query-7da66429d09d64bc174bd2e97a125f18a075b42ece77fc470664d29884a1fec2.json  query-8607ecd45d967df025fa80e925d485fd1205126e18ea75e8515830a9a966e17b.json  query-c39d6659aec9d6943d79b8b8e710f0ad5dcecedce86927d63b49bc8c5297330e.json  query-c8ff51e60151898d40a8bfb486b9b80e6c5028859fbeea7b2c9351452b518925.json  query-ca5278b7b4c0d4a5aafaef920599fd6364ecdce7959ab4e322fb9624b93fc6e4.json  query-cf81ebc22c4d867def76879aa476dc21d0b361d72e2465facc6111df033de720.json  query-db0b1cd8262aac245afe19041c12e401826f5c8829ed5119a6e29a5ebbe22a51.json  query-e43d5cb0fd357cf6f72891fe4f77aae58064ffd3e3c1cfe881c92edea724e967.json  query-e719855422aab4f09f3f43023398684c16b5e4d81d5be4dbfbe11314d603f852.json  query-ed7a6922dab1867cd2cff219e567293e269b9160568eeaf9944c697a35b1ebca.json
migrations/sqlite/: 20250129120011_initial_schema.sql  20250525142938_specialize_sync_times.sql
readwise-common/: Cargo.toml
readwise-common/migrations/postgres/: 20250129120011_initial_schema.sql
readwise-common/migrations/sqlite/: 20250129131402_change_dates_to_timestamp.sql
readwise-common/src/: db.rs  lib.rs  library.rs
readwise-export/: Cargo.toml
readwise-export/src/: main.rs  scripting.rs
readwise-export/templates/: book.md.tera
readwise-fetch/: Cargo.toml
readwise-fetch/src/: main.rs  readwise.rs
src/: db.rs  library.rs  main.rs  obsidian.rs  readwise.rs  scripting.rs
templates/: highlight.md.tera
