[package]
name = "obsidian-readwise-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "obsidian-readwise-export"
path = "src/main.rs"

[dependencies]
anyhow = "^1"
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "^4.3", features = ["derive", "env"] }
itertools = "0.14.0"
js-sandbox = "0.1.6"
obsidian-rust-interface = { git = "https://github.com/joshuacoles/Obsidian-Rust-Interface", version = "^0" }
regex = "^1"
reqwest = { version = "^0.12", features = ["json"] }
rhai = { version = "^1.20", features = ["serde", "serde_json", "sync"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yml = "0.0.12"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "migrate", "chrono"] }
tera = "^1.20"
tokio = { version = "^1.0", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"

[build-dependencies]
sqlx-cli = "0.7"
