[workspace]
resolver = "2"
members = [
    "readwise-common",
    "readwise-fetch", 
    "readwise-export"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "^1"
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "postgres", "any", "migrate", "chrono"] }
tokio = { version = "^1.0", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"

# Fetch-specific dependencies
async-stream = "0.3"
futures = "0.3"
reqwest = { version = "^0.12", features = ["json"] }
tokio-stream = "0.1"

# Export-specific dependencies
clap = { version = "^4.3", features = ["derive", "env"] }
itertools = "0.14.0"
js-sandbox = "0.1.6"
obsidian-rust-interface = { git = "https://github.com/joshuacoles/Obsidian-Rust-Interface", version = "^0" }
regex = "^1"
rhai = { version = "^1.20", features = ["serde", "serde_json", "sync"] }
serde_yml = "0.0.12"
tera = "^1.20"

[workspace.dependencies.sqlx-cli]
version = "0.7"