[package]
name = "readwise-export"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "readwise-export"
path = "src/main.rs"

[dependencies]
readwise-common = { path = "../readwise-common" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
itertools.workspace = true
js-sandbox.workspace = true
obsidian-rust-interface.workspace = true
regex.workspace = true
rhai.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tera.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true