[package]
name = "readwise-fetch" 
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "readwise-fetch"
path = "src/main.rs"

[dependencies]
readwise-common = { path = "../readwise-common" }
anyhow.workspace = true
async-stream.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true